--- a/src/app/dynamic-form/dynamic-form.component.html
+++ b/src/app/dynamic-form/dynamic-form.component.html
@@ -1,4 +1,4 @@
-<div style="display: flex;justify-content:space-between">
+<div  class="mainDiv">
     <div class="login-box">
         <h2>Enter Details</h2>
         <form [formGroup]="form" (ngSubmit)="saveData()">
