--- a/src/app/dynamic-form/dynamic-form.component.scss
+++ b/src/app/dynamic-form/dynamic-form.component.scss
@@ -1,5 +1,6 @@
 .mainDiv{
-  display: flex;justify-content:space-between
+  display: flex;
+  justify-content:space-between;
 }
 .login-box {
     position: absolute;
